--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-14 01:46:00
+lastsearch = 2024-07-14 03:30:37
 
 [en.wikipedia.org]
-match = 0.0%%
-title = March First Movement
-url = https://en.wikipedia.org/wiki/March_First_Movement
+match = 8.7%%
+title = Korea under Japanese rule
+url = https://en.wikipedia.org/wiki/Korea_under_Japanese_rule
 
 [www.britannica.com]
 match = 0.0%%
@@ -62,9 +62,9 @@ title = Runeterra Reforged Championship
 url = https://liquipedia.net/tft/Runeterra_Reforged/Championship
 
 [www.youtube.com]
-match = -56.5%%
-title = How to say 1 to 10 in native Korean numbers!😆👍🏻 ...
-url = https://www.youtube.com/watch?v=zMLyGQPz5Ng
+match = -21.7%%
+title = How to Use Korean Sentence Ending -네요
+url = https://www.youtube.com/watch?v=UFiSNO0znro
 
 [www.asianstudies.org]
 match = 17.4%%
