--- a/images/tham-ni-xop-hinh-60/config.ini
+++ b/images/tham-ni-xop-hinh-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-hinh-60.html
 lastopen = 2024-06-07 00:35:14
 
 [search]
-lastsearch = 2024-07-14 03:21:09
+lastsearch = 2024-07-14 03:33:19
 
 [xoptraisan.info]
 match = 5.3%%
@@ -27,9 +27,9 @@ title = Thảm xốp hoạt hình 60x60
 url = https://thamht.vn/products/tham-xop-hoat-hinh-cho-tre-em
 
 [shopee.vn]
-match = -121.1%%
-title = Thảm xốp trải sàn - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/thảm xốp/trải sàn
+match = -73.7%%
+title = thảm xốp ghép giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=thảm xốp ghép
 
 [thamtretho.com]
 match = 37.5%%
