--- a/images/tui-warmdream-180x200x09/config.ini
+++ b/images/tui-warmdream-180x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-180x200x09.html
 lastopen = 2024-06-17 10:35:51
 
 [search]
-lastsearch = 2024-07-13 18:49:19
+lastsearch = 2024-07-14 03:33:30
 
 [www.diepxuan.com]
 match = 10.5%%
@@ -24,7 +24,7 @@ url = https://rv-dreams.activeboard.com/mobile.spark?p=topic&topic=43740595
 [www.amazon.com]
 match = -50.0%%
 title = Amazon.com: Customer Questions & Answers
-url = https://www.amazon.com/ask/questions/Tx14C2FLBA8H5RI/?
+url = https://www.amazon.com/ask/questions/asin/B00AKI5Y9E/ref=ask_atf_aqp_dp
 
 [unofficialwarmoth.com]
 match = -10.0%%
@@ -50,4 +50,14 @@ url = https://www.tugnuts.com/viewtopic.php?f=2&t=4476
 match = -4.2%%
 title = Dynaudio Owner's Thread | Page 1040
 url = https://www.avsforum.com/threads/dynaudio-owners-thread.686371/page-1040
+
+[forum.e-bodies.org]
+match = -100.0%%
+title = Sound and heat deadner, ceramic tent in Interior - Page 2
+url = https://forum.e-bodies.org/interior/6/sound-and-heat-deadner-ceramic-tent/2702/15
+
+[forums.paddling.com]
+match = -4.2%%
+title = Tent - #20 by MarkK - Advice
+url = https://forums.paddling.com/t/tent/38662/20
 
