--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-14 02:12:24
+lastsearch = 2024-07-14 03:35:47
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -52,14 +52,14 @@ title = Name: Paul David Adams Address
 url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
-match = -5.0%%
-title = Christopher Dvorak, MD
-url = https://profiles.ucsf.edu/christopher.dvorak
+match = 10.0%%
+title = Nicholas Butowski, MD
+url = https://profiles.ucsf.edu/nicholas.butowski
 
 [www.ncbi.nlm.nih.gov]
-match = -150.0%%
-title = Pathogenesis of Respiratory Viral and Fungal Coinfections
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8597983/
+match = -130.0%%
+title = Exercise in patients with inflammatory bowel diseases
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5743119/
 
 [profiles.ucla.edu]
 match = 0.0%%
