--- a/images/chieu-truc-den-12/config.ini
+++ b/images/chieu-truc-den-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-12.html
 lastopen = 2024-06-07 00:20:09
 
 [search]
-lastsearch = 2024-07-14 01:32:31
+lastsearch = 2024-07-14 08:04:31
 
 [demxanh.com]
 match = -135.3%%
@@ -37,9 +37,9 @@ title = Chiếu Trúc hạt hồ lô đen Không Viền mắt nhỏ cao cấp ..
 url = https://shopee.vn/Chiếu-Trúc-hạt-hồ-lô-đen-Không-Viền-mắt-nhỏ-cao-cấp-thoáng-mát-BH-1-năm-(Ảnh-Thật)-i.8398725.5342652017
 
 [vongxepsaigon.vn]
-match = -152.9%%
-title = Chiếu trúc chiếu tre 1m2 hạt nâu đen hàng tốt loại 1 giá rẻ
-url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-1m2-hat-nau-den-hang-tot-loai-1-gia-re/
+match = 47.1%%
+title = chiếu trúc hạt nâu đen
+url = https://vongxepsaigon.vn/chieu-truc-hat-nau-den/
 
 [www.diepxuan.com]
 match = -64.7%%
