--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-07-14 06:19:27
+lastsearch = 2024-07-14 08:06:33
 
 [www.lazada.vn]
-match = -94.4%%
-title = Nệm Siêu Nhẹ Giá Tốt T03/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/nem-sieu-nhe/
+match = -27.8%%
+title = Nệm Cao Su Mỏng Giá Tốt T07/2024
+url = https://www.lazada.vn/tag/nem-cao-su-mong/
 
 [m.facebook.com]
 match = -100.0%%
@@ -22,9 +22,9 @@ title = Thùy Ngân (@huuloc861) • Instagram photos and videos
 url = https://www.instagram.com/huuloc861/
 
 [thegioinem.com]
-match = -116.7%%
-title = Top 5 nệm mỏng gấp gọn bán chạy nhất Thế Giới Nệm
-url = https://thegioinem.com/top-5-nem-mong-gap-gon-ban-chay-nhat-the-gioi-nem.html
+match = 17.6%%
+title = Bảng Giá Nệm 2024
+url = https://thegioinem.com/bang-gia-nem
 
 [cotienfoods.vn]
 match = -72.2%%
