--- a/images/tui-singapore14/config.ini
+++ b/images/tui-singapore14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore14.html
 lastopen = 2024-06-17 10:45:32
 
 [search]
-lastsearch = 2024-07-14 05:17:44
+lastsearch = 2024-07-14 08:08:32
 
 [www.tui.co.uk]
-match = -153.3%%
-title = Where We Fly | Flights with TUI 2024 / ...
-url = https://www.tui.co.uk/flight/where-we-fly
+match = 6.7%%
+title = Flight Timetable
+url = https://www.tui.co.uk/flight/timetable
 
 [cruisepanda.com]
 match = -213.3%%
@@ -127,8 +127,8 @@ title = TUI Airways Adds Singapore Charters in NW23 — ...
 url = https://www.aeroroutes.com/eng/230410-tomsin
 
 [www.birminghamairport.co.uk]
-match = 0.0%%
-title = 
+match = -140.0%%
+title = TUI FIRST PASSENGER FLIGHT TO SINGAPORE TAKES ...
 url = https://www.birminghamairport.co.uk/media-information/news/2023/12/tui-first-passenger-flight-to-singapore-takes-off-from-birmingham-airport/
 
 [www.skyscanner.net]
