--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-14 08:06:10
+lastsearch = 2024-07-14 09:58:00
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -57,8 +57,8 @@ title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
 url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=zGiTZGuD2z&sig=ACfU3U2iT-mH6c4Cq61N0h4U8hQBF03qMQ&hl=en&sa=X&ved=2ahUKEwikhYi_q6WHAxUThIkEHViOCZoQ6AF6BAgdEAM
 
 [www.travelweekly.com]
-match = -56.5%%
-title = Ho Chi Minh City Hotels Near Jade Emperor Pagoda
+match = -87.0%%
+title = Ho Chi Minh City Hotels Near Jade Emperor Pagoda- Page 10
 url = https://www.travelweekly.com/Hotels/Ho-Chi-Minh-City-Vietnam/Hotels-Near-Jade-Emperor-Pagoda-p4247472?s=2+u3NLAzhVE=u&pg=10
 
 [sonoivu.thaibinh.gov.vn]
@@ -122,8 +122,8 @@ title = Trường Đại học Y Dược Thái Bình
 url = https://tbump.edu.vn/
 
 [www.reddit.com]
-match = -21.7%%
-title = How to pronounce Thai Binh. : r/Vietnamese
+match = 30.4%%
+title = How to pronounce Thai Binh.
 url = https://www.reddit.com/r/Vietnamese/comments/1d5d9f4/how_to_pronounce_thai_binh/
 
 [www.macom.com]
