--- a/images/ga-chong-tham-dreamland-200x220/config.ini
+++ b/images/ga-chong-tham-dreamland-200x220/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chong-tham-dreamland-200x220.html
 lastopen = 2024-06-07 00:24:06
 
 [search]
-lastsearch = 2024-07-14 04:11:34
+lastsearch = 2024-07-14 09:55:23
 
 [www.dreamland.vn]
 match = -14.3%%
@@ -17,19 +17,19 @@ title = Lưu trữ 200×220 - Trang 14 trên 21 ... - Đệm Dreamland
 url = https://demdreamland.vn/kich-thuoc/200x220/page/14/
 
 [demxanh.com]
-match = -6.5%%
-title = Đệm bông ép Dreamland chống thoái hóa cột sống
-url = https://demxanh.com/dem-bong-ep-dreamland-chong-thoai-hoa-cot-song.html
+match = 3.2%%
+title = Đệm bông ép Dreamland bông Nano chống khuẩn
+url = https://demxanh.com/dem-bong-ep-dreamland-bong-nano-chong-khuan.html
 
 [dreamland.vn]
-match = -38.7%%
-title = Chăn Tuyết Điều Hòa - Chăn ga gối đệm cao cấp Dreamland
+match = -21.1%%
+title = Chăn Tuyết Điều Hòa
 url = http://dreamland.vn/Chan-Tuyet-Dieu-Hoa-i4421.html
 
 [demxinh.vn]
-match = 9.7%%
-title = Chăn Ga Gối Dreamland Chính Hãng Giá Tốt
-url = https://demxinh.vn/chan-ga-goi-dreamland/
+match = -9.7%%
+title = [HỎI-ĐÁP] Ga chống thấm loại nào tốt nhất hiện nay?
+url = https://demxinh.vn/tin-tuc/hoi-dap-ga-chong-tham-loai-nao-tot-nhat-hien-nay.html
 
 [dongahome.vn]
 match = 3.2%%
