--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-07-14 09:20:20
+lastsearch = 2024-07-14 09:52:16
 
 [everonvn.com.vn]
-match = -11.1%%
-title = Bộ Everon Ep1831 - Curtis
-url = https://everonvn.com.vn/everon/630/bo-everon-ep1831
+match = 0.0%%
+title = Vỏ Gối Everon Giảm Giá Es1366
+url = https://everonvn.com.vn/everon/588/vo-goi-everon-giam-gia-es1366
 
 [www.lazada.vn]
 match = -172.2%%
@@ -32,9 +32,9 @@ title = Lịch sử giá 🥑 Vỏ gối đầu cotton poly 45x65 🥑 áo gối
 url = https://muathongminh.vn/xu-huong-vo-goi-dau-cotton-poly-45x65-ao-goi-nam-nhieu-mau-sac-mau-bo-xam-duoc-chon-mau-p.1__19609304624__137416996
 
 [www.diepxuan.com]
-match = -11.1%%
-title = Vỏ gối EPM21070 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-epm21070-45x65.html
+match = 11.1%%
+title = Điệp Xuân Vỏ gối ES1801 45x65
+url = https://www.diepxuan.com/vo-goi-es1801-45x65.html
 
 [www.everonqb.com]
 match = -38.9%%
