--- a/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-140x200-tr.html
 lastopen = 2024-06-07 00:25:30
 
 [search]
-lastsearch = 2024-07-14 10:23:43
+lastsearch = 2024-07-14 12:19:38
 
 [everon.online]
-match = 50.0%%
-title = Bộ Ga Chun Chần Everon Bốn Mùa ...
-url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-chan-everon-moi-nhat
+match = -32.4%%
+title = 4 – Everon Tân Mai | Tổng Đại Lý Chăn Ga Gối Đệm Everon ...
+url = https://everon.online/blogs/video/4
 
 [www.everonvn.vn]
 match = -32.4%%
-title = Everon ESM-22014 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-esm22014.html
+title = Everon EST-23031 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-est23031.html
 
 [nem.vn]
 match = 5.9%%
@@ -27,9 +27,9 @@ title = Bộ chăn bốn mùa Dòng Thời Gian - EPT24081 - Everon
 url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept24081
 
 [vuanem.com]
-match = 17.6%%
-title = Bộ ga chun chăn chần bốn mùa Goodnight Mori 4 Chi Tiết
-url = https://vuanem.com/bo-ga-chun-chan-chan-bon-mua-goodnight-mori-4-chi-tiet.html
+match = 5.9%%
+title = Mua Bộ Ga Chun Chần Chất Lượng - Cao Cấp - Giá Tốt Nhất
+url = https://vuanem.com/chan-ga-goi/bo-ga-chun-chan
 
 [everonvn.com.vn]
 match = 32.1%%
