--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 lastopen = 2024-06-07 00:34:05
 
 [search]
-lastsearch = 2024-07-14 03:49:19
+lastsearch = 2024-07-14 12:22:28
 
 [everon.com.vn]
-match = 11.1%%
-title = Bộ Chăn Ga Everon EPM 22070
-url = https://everon.com.vn/bo-chan-ga-everon-epm-22070/
+match = 22.5%%
+title = Bộ Chăn Ga Everon EPM 22073 Phạm Ngọc Thạch
+url = https://everon.com.vn/bo-chan-ga-everon-epm-22073/
 
 [everon.online]
-match = 18.9%%
-title = Bộ Chăn Ga Gối Everon SR04 Chính Hãng
-url = https://everon.online/products/bo-everon-sr04
+match = -5.0%%
+title = [VIDEO] Bộ Chăn Ga Everon EPM22063 Chất Liệu Modal Cao ...
+url = https://everon.online/blogs/video/bo-everon-epm22063-co-gi-dac-biet
 
 [everonhn.com.vn]
 match = 14.8%%
@@ -37,9 +37,9 @@ title = Bo Ga chun chần bốn mùa EPM22063 180x200
 url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 
 [www.everonvni.vn]
-match = 30.6%%
-title = BỘ CHĂN BỐN MÙA HOA MỘC LAN ESB23022
-url = https://www.everonvni.vn/bo-chan-bon-mua-hoa-moc-lan-esb23022/
+match = 25.7%%
+title = BỘ CHĂN GA GỐI HOA HẸN ƯỚC EPC23045
+url = https://www.everonvni.vn/bo-chan-ga-goi-hoa-hen-uoc-epc23045/
 
 [everonhanquoc.vn]
 match = 19.4%%
