--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-14 11:40:40
+lastsearch = 2024-07-14 12:21:09
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -244,7 +244,7 @@ url = https://baosonla.org.vn/the-thao/phong-trao-the-duc-the-thao-o-sop-cop-LcJ
 [books.google.com]
 match = -268.8%%
 title = Phật giáo Nam tông cái vùng Nam bộ - Page 112 - Google Books Result
-url = https://books.google.com/books?id=eREfEAAAQBAJ&pg=PA112&lpg=PA112&dq=chieu+lac+soc+08&source=bl&ots=d4HvziP05L&sig=ACfU3U1gDWQAB88ZmqfFMrxPbmu6hdQNnQ&hl=en&sa=X&ved=2ahUKEwiI2Nm326WHAxUcElkFHf7PA5gQ6AF6BAgWEAM
+url = https://books.google.com/books?id=eREfEAAAQBAJ&pg=PA112&lpg=PA112&dq=chieu+lac+soc+08&source=bl&ots=d4HvziR47U&sig=ACfU3U3VULyYUQ_oRWIxd6WoD04wlSo5_A&hl=en&sa=X&ved=2ahUKEwjDz-W95KWHAxXcFFkFHY6gBskQ6AF6BAgXEAM
 
 [daihoc.fpt.edu.vn]
 match = -162.5%%
@@ -282,9 +282,9 @@ title = Địa chấn lớn nhất EURO 2024: Georgia đánh bại Bồ Đào ..
 url = https://baolongan.vn/dia-chan-lon-nhat-euro-2024-georgia-danh-bai-bo-dao-nha-khien-ronaldo-hoan-toan-tat-tieng-a178337.html
 
 [vietstock.vn]
-match = -212.5%%
-title = Phân tích kỹ thuật phiên chiều 09/07: Tâm lý lạc quan dần ...
-url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-0907-tam-ly-lac-quan-dan-quay-lai-585-1205716.htm
+match = -231.2%%
+title = Phân tích kỹ thuật phiên chiều 08/07: Thị trường diễn biến ...
+url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-0807-thi-truong-dien-bien-giang-co-585-1205437.htm
 
 [baohungyen.vn]
 match = -200.0%%
