--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-14 11:17:19
+lastsearch = 2024-07-14 12:18:14
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -42,9 +42,9 @@ title = HOA Bylaws, HOA Regulations, and CC&Rs
 url = https://spectrumam.com/everything-you-need-to-know-about-hoa-bylaws-regulations-and-ccrs/
 
 [www.quora.com]
-match = -176.5%%
-title = Can my HOA fine me if they haven't explained what I've ...
-url = https://www.quora.com/Can-my-HOA-fine-me-if-they-haven-t-explained-what-I-ve-done-wrong-They-sent-me-a-picture-2-weeks-ago-of-my-property-with-zero-context-or-explanation-of-what-s-wrong-Today-I-received-a-fine-Again-with-zero
+match = -217.6%%
+title = If I already live in a neighborhood, and HOA tries to claim it ...
+url = https://www.quora.com/If-I-already-live-in-a-neighborhood-and-HOA-tries-to-claim-it-am-I-forced-to-become-an-HOA-member
 
 [www.hopb.co]
 match = -141.2%%
@@ -355,4 +355,9 @@ url = https://coloradosun.com/2023/08/14/hoa-foreclosed-homes-auction-equity/
 match = 0.0%%
 title = House File 2442
 url = https://www.legis.iowa.gov/DOCS/GA/79GA/Legislation/HF/02400/HF02442/Current.html
+
+[www.vietnam.vn]
+match = -82.4%%
+title = "Beautiful flower" on top of Giang Man
+url = https://www.vietnam.vn/en/bong-hoa-dep-tren-dinh-giang-man/
 
