--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-07-14 10:39:14
+lastsearch = 2024-07-14 12:46:15
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -22,9 +22,9 @@ title = Chiếu Tăm H&T - Chiếu Thanh Hương Trúc cao cấp
 url = https://chieutruc.info/chieu-tam-ht/
 
 [www.thietbidiendgp.vn]
-match = -53.3%%
-title = Đèn rọi COB 8020 HT MAX LIGHT
-url = https://www.thietbidiendgp.vn/hang/htlight/den-chieu-sang/den-roi-cob-8020-htlight
+match = -46.7%%
+title = Đèn mắt ếch chiếu điểm HT 8095 10W
+url = https://www.thietbidiendgp.vn/products/den-mat-ech-chieu-diem-ht-8095-10w
 
 [www.htlightlevel.vn]
 match = -120.0%%
