--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-07-14 10:51:29
+lastsearch = 2024-07-14 12:44:36
 
 [www.diepxuan.com]
 match = -6.7%%
@@ -12,9 +12,9 @@ title = Điệp Xuân Chiếu cây HT 160x200
 url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
 
 [shopee.vn]
-match = -40.0%%
-title = chiếu trúc tăm HT cao cấp 2mx2.2m
-url = https://shopee.vn/chiếu-trúc-tăm-HT-cao-cấp-2mx2.2m-i.68883759.22469028239
+match = -6.7%%
+title = chiếu trúc tăm hương trúc ht
+url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
 
 [www.htv.com.vn]
 match = -106.7%%
@@ -42,9 +42,9 @@ title = Đèn LED Spotlight Âm Trần 8091 - HT Max Light
 url = https://www.htlightlevel.vn/den-led-spotlight-am-tran-8091/
 
 [www.youtube.com]
-match = -213.3%%
-title = 🔴[Trực Tiếp] Thời Sự Sáng Ngày 10/7 | Tin Thời Sự Trong ...
-url = https://www.youtube.com/watch?v=xQvpG3Qa6rY
+match = -260.0%%
+title = WoT || I Finally Completed HT-14 || And It Was Just Way Too ...
+url = https://www.youtube.com/watch?v=c7UL4QxJSt0
 
 [dauthau.asia]
 match = -240.0%%
